victoria-logs/DaemonSet.victoria-logs-fluent-bit.k8s.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: victoria-logs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/version: 3.0.4
    helm.sh/chart: fluent-bit-0.46.7
  name: victoria-logs-fluent-bit
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: victoria-logs
      app.kubernetes.io/name: fluent-bit
  template:
    metadata:
      annotations:
        checksum/config: f0eaeaee18f47225a0d0e485d394bf06ec42f4d3a241d2809ba2a3a77896cfd9
      labels:
        app.kubernetes.io/instance: victoria-logs
        app.kubernetes.io/name: fluent-bit
    spec:
      containers:
        - args:
            - --workdir=/fluent-bit/etc
            - --config=/fluent-bit/etc/conf/fluent-bit.conf
          command:
            - /fluent-bit/bin/fluent-bit
          image: cr.fluentbit.io/fluent/fluent-bit:3.0.4
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: http
          name: fluent-bit
          ports:
            - containerPort: 2020
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: http
          volumeMounts:
            - mountPath: /fluent-bit/etc/conf
              name: config
            - mountPath: /var/log
              name: varlog
            - mountPath: /var/lib/docker/containers
              name: varlibdockercontainers
              readOnly: true
      dnsPolicy: ClusterFirst
      hostNetwork: false
      serviceAccountName: victoria-logs-fluent-bit
      volumes:
        - configMap:
            name: victoria-logs-fluent-bit
          name: config
        - hostPath:
            path: /var/log
          name: varlog
        - hostPath:
            path: /var/lib/docker/containers
          name: varlibdockercontainers
