victoria-logs/Pod.victoria-logs-fluent-bit-test-connection.k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test
    helm.sh/hook-delete-policy: hook-succeeded
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: 3.0.4
    helm.sh/chart: fluent-bit-0.46.7
  name: victoria-logs-fluent-bit-test-connection
  namespace: default
spec:
  containers:
    - args:
        - -c
        - wget -O- victoria-logs-fluent-bit:2020
      command:
        - sh
      image: busybox:latest
      imagePullPolicy: Always
      name: wget
  restartPolicy: Never
