victoria-logs/Service.victoria-logs-fluent-bit.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: victoria-logs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: fluent-bit
    app.kubernetes.io/version: 3.0.4
    helm.sh/chart: fluent-bit-0.46.7
  name: victoria-logs-fluent-bit
  namespace: default
spec:
  ports:
    - name: http
      port: 2020
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: victoria-logs
    app.kubernetes.io/name: fluent-bit
  type: ClusterIP
