victoria-logs/Service.victoria-logs-victoria-logs-single-server.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: victoria-logs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: victoria-logs-single
    app.kubernetes.io/version: v1.52.0
    helm.sh/chart: victoria-logs-single-0.13.9
  name: victoria-logs-victoria-logs-single-server
  namespace: victoria-logs
spec:
  clusterIP: None
  ports:
    - name: http
      port: 9428
      protocol: TCP
      targetPort: http
  selector:
    app: server
    app.kubernetes.io/instance: victoria-logs
    app.kubernetes.io/name: victoria-logs-single
  type: ClusterIP
