victoria-logs/HTTPRoute.victoria-logs.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs
  namespace: victoria-logs
spec:
  hostnames:
    - victorialogs.madhan.app
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: kube-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: victoria-logs-victoria-logs-single-server
          port: 9428
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
